Fixes some spacing issues

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -30,6 +30,9 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  margin-bottom: -20px;
+  /* z-index: 3; */
+  /* padding-bottom: -10px; */
 }
 
 .sub-header {
@@ -174,6 +177,7 @@
   gap: 30px;
   padding-right: 20px;
   padding-bottom: 10px;
+  padding-top: 10px;
   height: 100%;
 }
 
